# rust-auto-gpt-coder

./: .gitignore  Cargo.toml  README.md
backend_code/: Cargo.toml
backend_code/src/: template.rs
src/: agents.rs  api.rs  main.rs  model.rs  utilities.rs
src/agents/: architect.rs  backend.rs  common.rs  manager.rs
src/agents/architect/: architect_agent.rs  architect_ai_functions.rs
src/agents/backend/: backend_agent.rs  backend_ai_functions.rs
src/agents/common/: attributes.rs  traits.rs
src/agents/manager/: managing_agent.rs  managing_ai_functions.rs
src/api/: open_ai.rs
src/api/open_ai/: request.rs  response.rs
src/model/: endpoint_route.rs  project.rs  project_scope.rs
src/utilities/: ai_tasks.rs  backend_code_persistence.rs  command_line.rs  networking.rs
