#
#  Cargo.toml
#  rust-auto-gpt-coder
#
#  Created by Joel Lopes Da Silva on 1/25/26.
#  Copyright © 2026 Joel Lopes Da Silva. All rights reserved.
#

[package]
name = "rust-auto-gpt-coder"
version = "0.1.0"
edition = "2024"

[dependencies]
ai_functions = "0.1.1"
async-trait = "0.1.89"
crossterm = "0.29.0"
dotenv = "0.15.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.49.0", features = ["full"] }
webbrowser = "1.0.6"
